--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="naver-site-verification" content="cda866ce38fc48ed6ca3236d0629dc018b0735c1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>정답창고 | 중고등 문제집 답지 다운로드</title>
-    <meta name="description" content="중고등 문제집 답지를 쉽고 빠르게 다운로드하세요. 다양한 과목의 답지를 제공합니다.">
-    <meta name="keywords" content="정답창고, 문제집 답지, 수학 답지, 영어 답지, 과학 답지, 중학 수학, 고등 수학, 답지 다운로드, 답지">
+    <title>정답이 Jungdapi | 초중고 답지 공유 사이트</title>
+    <meta name="description" content="초중고 문제집 답지를 쉽고 빠르게 다운로드하세요.">
+    <meta name="keywords" content="jungdapi, 답지, 자이스토리, 마더텅, 리트윗, 쎈, RPM, 개념원리, 라이트쎈, 일품, 수능특강, 수능완성, 메가스터디, 이투스, 대성마이맥, 자이스토리 실전, 자이스토리 기출, 마더텅 기출문제집, 수능 기출의 미래, 빅데이터 수능기출, 블랙라벨, 자이백, 체크체크, 백발백중, 우공비, 숨마쿰라우데, 능률 VOCA, 워드마스터, 그래머존, 그래머인유즈, 올림포스, 리딩튜터, 수능연계교재, 교과서 개념정리, 한완수, 마플, 미래엔, 비상, 천재교육, 동아출판, 비상교육, 국어의기술, 수학의바이블, 수능길잡이, 스카이에듀, EBS 연계교재, EBS 수특, EBS 수완, 리딩파워, 리딩엣지, 공단기, 해커스, 능률, 미라클, 시나공, 한끝, 셀파, 체크체크체크, 고난도N제, 킬러문항, 수학의 정석, 영어의 기술, 과학의 원리, 백점맞는시리즈, 우등생시리즈, 천일문, 그래머트리, 수능기출문제집, 내신대비문제집, 고등수학문제집, 고등영어문제집, 고등국어문제집, 개념플러스유형, 라이트쎈, 유형라이트
+
+">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
