--- a/100bal.html
+++ b/100bal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>체크체크 중학 수학 1-1</title>
+    <title>100발 100중 중학 영어 1-1 답지</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -204,12 +204,12 @@
             }
 
             viewButton.addEventListener('click', () => {
-                window.open('https://drive.google.com/file/d/1YMqNniX7N7QaFZzOzV9CJcoywM94ibVU/view?usp=sharing', '_blank');
+                window.open('https://drive.google.com/file/d/1R_JiZ59Vc6qlaJg1n5i6tIN0fGisIY78/view?usp=sharing', '_blank');
             });
 
             downloadButton.addEventListener('click', () => {
                 // 다운로드 링크를 직접 지정합니다.
-                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1YMqNniX7N7QaFZzOzV9CJcoywM94ibVU&export=download';
+                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1R_JiZ59Vc6qlaJg1n5i6tIN0fGisIY78&export=download';
                 // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
                 window.location.href = downloadUrl;
             });
@@ -228,10 +228,10 @@
     <div class="book-section">
         <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/zfYPHXtH/RMP.jpg" alt="RPM 중학 수학 1-1" class="book-cover">
-            <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">개념원리 RPM 중학 수학 1-1</h3>
+            <img src="https://i.postimg.cc/LXWQBvQ0/image.jpg" alt="100발100중 중학 영어 1-1" class="book-cover">
+            <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">100발100중 중학 영어 1-1</h3>
             <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
-                유형의 완성 RPM!
+                100발100중으로 시함 완벽대비!
             </p>
         </div>
         <div class="button-container">
