--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
         function handleSearch() {
             // 수정된 부분: window.open 사용
-            window.open('https://jungdapi.netlify.app/search', '_blank');
+            window.location.href = 'https://jungdapi.netlify.app/search';
         }
 
         function displayRecentAnswers(page) {
