--- a/index.html
+++ b/index.html
@@ -555,8 +555,11 @@
                     </div>
                 `;
                 answerCard.addEventListener('click', () => {
-    window.location.href = answer.link;
-});
+                    // 수정된 부분: window.open 사용
+                    window.location.href=answer.link;
+                });
+                recentAnswersContainer.appendChild(answerCard);
+            }
 
             const paginationContainer = document.getElementById('pagination');
             paginationContainer.innerHTML = '';
@@ -615,7 +618,7 @@
             carouselItems.forEach((item, index) => {
                 item.addEventListener('click', () => {
                     // 수정된 부분: window.open 사용
-                    window.open(carouselLinks[index], '_blank');
+                    window.location.href=carouselLinks[index];
                 });
             });
 
@@ -654,10 +657,10 @@
     <div class="section">
         <h2>과목</h2>
         <div class="popular-answers">
-            <div><a href="https://www.math1.com" target="_blank">수학 답지</a></div>
-            <div><a href="https://www.english1.com" target="_blank">영어 답지</a></div>
-            <div><a href="https://www.science1.com" target="_blank">과학 답지</a></div>
-            <div><a href="https://www.korean1.com" target="_blank">국어 답지</a></div>
+            <div><a href="https://www.math1.com">수학 답지</a></div>
+            <div><a href="https://www.english1.com">영어 답지</a></div>
+            <div><a href="https://www.science1.com">과학 답지</a></div>
+            <div><a href="https://www.korean1.com">국어 답지</a></div>
         </div>
     </div>
 
@@ -708,7 +711,7 @@
 
  </div>
         <div class="request-button">
-            <button onclick="window.open('https://www.jungdap.kro.kr/form1', '_blank')">
+            <button onclick="window.location.href='https://www.jungdap.kro.kr/form1'">
                 답지 추가 요청하기
             </button>
         </div>
