--- a/search.html
+++ b/search.html
@@ -187,37 +187,37 @@
         let allAnswers = [
             {
                 title: '개념+유형 기초탄탄 라이트 중학 수학 1-1',
-                link: 'https://www.jungdap.kro.kr/개념-유형',
+                link: 'https://jungdapi.netlify.app/uhyeong',
                 imgSrc: 'https://i.postimg.cc/3NcNq4y7/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
             {
                 title: '체크체크 중학 수학 1-1',
-                link: 'https://www.jungdap.kro.kr/체크체크',
+                link: 'https://jungdapi.netlify.app/ch1',
                 imgSrc: 'https://i.postimg.cc/Vk1P8sjc/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
             {
                 title: '개념원리 RPM 중학 수학 1-1',
-                link: 'https://www.jungdap.kro.kr/rpm',
+                link: 'https://jungdapi.netlify.app/rpm',
                 imgSrc: 'https://i.postimg.cc/zfYPHXtH/RMP.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
             {
                 title: '체크체크 중학 수학 1-2',
-                link: 'https://www.jungdap.kro.kr/체크체크-1-2',
+                link: 'https://jungdapi.netlify.app/ch2',
                 imgSrc: 'https://i.postimg.cc/3Nj26YjV/1-2.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
             {
                 title: 'I Love Grammar 1권',
-                link: 'https://www.jungdap.kro.kr/ilove',
+                link: 'https://jungdapi.netlify.app/ilg',
                 imgSrc: 'https://i.postimg.cc/T25Sv5Q1/ilove.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
             {
                 title: '1316 GRAMMAR Level 1',
-                link: 'https://shortlink.uk/YD8D',
+                link: 'https://jungdapi.netlify.app/1316',
                 imgSrc: 'https://i.postimg.cc/5NcKz42V/1316.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
