--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
             background-color: #ddd;
         }
         #pagination button.active {
-            background-color: #4CAF50;
+            background-color: #f8f8f8;
             color: white;
-            border-color: #4CAF50;
+            border-color: #f8f8f8;
         }
 
         /* 모바일 환경 스타일 조정 */
