--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
             background-color: #ddd;
         }
         #pagination button.active {
-            background-color: #f8f8f8;
+            background-color: #282c34;
             color: white;
-            border-color: #f8f8f8;
+            border-color: #282c34;
         }
 
         /* 모바일 환경 스타일 조정 */
