--- a/ch2.html
+++ b/ch2.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>체크체크 중학 수학 1-2 답지</title>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>체크체크 중학 수학 1-2</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -178,6 +184,7 @@
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            const darkModeButton = document.getElementById('dark-mode-button');
             const body = document.body;
             const bookSection = document.querySelector('.book-section');
             const bookTitle = document.querySelector('.book-title');
@@ -223,6 +230,7 @@
     <a href="index.html" class="go-back-button">
         <span>←</span>
     </a>
+    <button id="dark-mode-button" class="dark-mode-button"></button>
     <div class="book-section">
         <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
         <div class="book-info">
