--- a/index.html
+++ b/index.html
@@ -408,16 +408,16 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                 {
-                    title: '2023 수학 답지',
-                    link: 'https://www.4.com',
-                    imgSrc: 'https://i.postimg.cc/3NcNq4y7/image.jpg',
-                    description: '2023 개정 교육과정 수학 정답',
+                    title: '수력충전 중학 수학 1-1',
+                    link: 'https://jungdapi.netlify.app/suryeok',
+                    imgSrc: 'https://i.postimg.cc/zD4x87tg/image.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                 {
-                    title: '2023 영어 답지',
-                    link: 'https://www.5.com',
-                    imgSrc: 'https://i.postimg.cc/Vk1P8sjc/image.jpg',
-                    description: '2023 개정 교육과정 영어 정답',
+                    title: 'I love grammar level 1',
+                    link: 'https://jungdapi.netlify.app/ilg',
+                    imgSrc: 'https://i.postimg.cc/T25Sv5Q1/ilove.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                
                 {
@@ -685,7 +685,7 @@ window.addEventListener('scroll', () => {
     </div>
 
     <div class="section">
-        <h2>[2022 개정] 수학 인기 답지</h2>
+        <h2>전체 답지</h2>
         <div class="recent-answers">
             
         </div>
