--- a/suryeok.html
+++ b/suryeok.html
@@ -228,7 +228,7 @@
     <div class="book-section">
         <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/T25Sv5Q1/ilove.jpg" class="book-cover">
+            <img src="https://i.postimg.cc/zD4x87tg/image.jpg" class="book-cover">
             <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">수력충전 중학 수학 1-1 답지</h3>
             <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
                 쉬운 개념 이해와 정확한 연산력을 기르는 수력충전!
