--- a/test.html
+++ b/test.html
@@ -10,42 +10,154 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        .header {
+            background: #f0f4f8; /* 연한 하늘색 */
+            padding: 16px 0;
+            margin-bottom: 24px;
+        }
+        .header h1 {
+            color: #1e293b; /* 짙은 회색 */
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .upload-button {
+            background-color: #4caf50; /* 초록색 */
+            color: white;
+            padding: 10px 16px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            align-self: flex-start; /* 상단 정렬 */
+        }
+        .upload-button:hover {
+            background-color: #45a049; /* 약간 더 짙은 초록색 */
+        }
+        .search-section {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 24px;
+        }
+        .search-section h2 {
+            color: #1e293b; /* 짙은 회색 */
+            font-size: 24px;
+            margin-bottom: 16px;
+        }
+        .search-input {
+            border: 1px solid #d1d5db; /* 연한 회색 테두리 */
+            border-radius: 8px;
+            padding: 10px;
+            margin-right: 12px;
+            width: 100%;
+            max-width: 300px;
+            transition: border-color 0.3s ease;
+        }
+        .search-input:focus {
+            outline: none;
+            border-color: #3b82f6; /* 파란색 */
+            box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.25);
+        }
+        .search-button {
+            background-color: #3b82f6; /* 파란색 */
+            color: white;
+            padding: 10px 16px;
+            border-radius: 8px;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+        .search-button:hover {
+            background-color: #2563eb; /* 약간 더 짙은 파란색 */
+        }
+        .results-section {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 24px;
+        }
+        .results-section h2 {
+            color: #1e293b; /* 짙은 회색 */
+            font-size: 24px;
+            margin-bottom: 16px;
+        }
+        .results-list li {
+            background-color: #f7fafc; /* 아주 연한 회색 */
+            padding: 12px;
+            border-radius: 8px;
+            margin-bottom: 8px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid #e5e7eb; /* 더 연한 회색 테두리 */
+        }
+        .results-list li a {
+            background-color: #3b82f6; /* 파란색 */
+            color: white;
+            padding: 8px 12px;
+            border-radius: 8px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+        .results-list li a:hover {
+            background-color: #2563eb; /* 약간 더 짙은 파란색 */
+        }
+        #no-results-message {
+            color: #6b7280; /* 중간 회색 */
+        }
+        .upload-section {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .upload-section h2 {
+            color: #1e293b; /* 짙은 회색 */
+            font-size: 24px;
+            margin-bottom: 16px;
+        }
+        .upload-message {
+            margin-top: 16px;
+            font-size: 14px;
+            font-weight: 500;
+        }
     </style>
 </head>
 <body class="bg-gray-100">
-    <header class="bg-indigo-500 text-white py-4">
-        <div class="container mx-auto px-4">
+    <header class="header">
+        <div class="container mx-auto px-4 flex justify-between items-start"> /* items-start로 변경 */
             <h1 class="text-3xl font-semibold">문제집 답지 공유 플랫폼</h1>
-            <p class="text-lg">함께 답을 공유하고, 함께 성장하세요!</p>
+            <a href="#upload-section" class="upload-button">답지 업로드</a>
         </div>
     </header>
 
     <main class="container mx-auto py-6 px-4">
-        <section class="bg-white rounded-lg shadow-md p-6 mb-8">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4">답지 검색</h2>
+        <section class="search-section">
+            <h2 class="text-2xl font-semibold">답지 검색</h2>
             <div class="flex flex-col sm:flex-row gap-4">
-                <input type="text" id="search-box" placeholder="문제집 이름 또는 과목을 입력하세요..." class="border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                <button id="search-button" class="bg-indigo-500 hover:bg-indigo-600 text-white rounded-md py-2 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition-colors duration-300">검색</button>
+                <input type="text" id="search-box" placeholder="문제집 이름 또는 과목을 입력하세요..." class="search-input">
+                <button id="search-button" class="search-button">검색</button>
             </div>
         </section>
 
-        <section class="bg-white rounded-lg shadow-md p-6 mb-8">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4">답지 업로드</h2>
-            <p class="text-gray-600 mb-4">가지고 있는 문제집 답안을 공유해주세요!</p>
-            <div class="flex flex-col sm:flex-row gap-4">
-                <input type="text" id="upload-book-name" placeholder="문제집 이름" class="border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                <input type="text" id="upload-subject" placeholder="과목" class="border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                <input type="file" id="upload-file" class="mb-4 sm:mb-0">
-                <button id="upload-button" class="bg-green-500 hover:bg-green-600 text-white rounded-md py-2 px-4 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition-colors duration-300">업로드</button>
-            </div>
-            <p id="upload-message" class="mt-4 text-gray-700"></p>
-        </section>
-
-        <section id="results-container" class="bg-white rounded-lg shadow-md p-6">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4">검색 결과</h2>
+        <section id="results-container" class="results-section">
+            <h2 class="text-2xl font-semibold">검색 결과</h2>
             <ul id="results-list" class="space-y-3">
                 </ul>
             <p id="no-results-message" class="text-gray-500" style="display: none;">검색 결과가 없습니다.</p>
+        </section>
+
+        <section id="upload-section" class="upload-section">
+            <h2 class="text-2xl font-semibold">답지 업로드</h2>
+            <p class="text-gray-600 mb-4">가지고 있는 문제집 답안을 공유해주세요!</p>
+            <div class="flex flex-col sm:flex-row gap-4">
+                <input type="text" id="upload-book-name" placeholder="문제집 이름" class="search-input">
+                <input type="text" id="upload-subject" placeholder="과목" class="search-input">
+                <input type="file" id="upload-file" class="mb-4 sm:mb-0">
+                <button id="upload-button" class="upload-button">업로드</button>
+            </div>
+            <p id="upload-message" class="mt-4 text-gray-700"></p>
         </section>
     </main>
 
@@ -67,13 +179,17 @@
         const noResultsMessage = document.getElementById('no-results-message');
         const resultsContainer = document.getElementById('results-container');
 
-        let answerKeys = [
+        // 로컬 스토리지에서 answerKeys를 불러옵니다.
+        let answerKeys = JSON.parse(localStorage.getItem('answerKeys')) || [
             { bookName: "수학의 정석", subject: "수학", file: "math1.pdf" },
             { bookName: "쎈 수학", subject: "수학", file: "math2.pdf" },
             { bookName: "자이스토리", subject: "영어", file: "english1.pdf" },
             { bookName: "EBS 수능특강", subject: "영어", file: "english2.pdf" },
             { bookName: "개념원리", subject: "수학", file: "math3.pdf" },
         ];
+
+        // 초기 로딩 시 검색 결과를 표시합니다.
+        displaySearchResults();
 
         searchButton.addEventListener('click', () => {
             const searchTerm = searchBox.value.toLowerCase();
@@ -89,20 +205,7 @@
             } else {
                 noResultsMessage.style.display = 'none';
                 resultsContainer.style.display = 'block'; // Show the results container
-                filteredAnswerKeys.forEach(answerKey => {
-                    const listItem = document.createElement('li');
-                    listItem.className = "bg-white rounded-md shadow-sm py-2 px-3 flex justify-between items-center";
-                    listItem.innerHTML = `
-                        <div>
-                            <h3 class="font-semibold text-gray-800">${answerKey.bookName}</h3>
-                            <p class="text-gray-600 text-sm">${answerKey.subject}</p>
-                        </div>
-                        <a href="${answerKey.file}" download class="bg-blue-500 hover:bg-blue-600 text-white rounded-md py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-colors duration-300">
-                            다운로드
-                        </a>
-                    `;
-                    resultsList.appendChild(listItem);
-                });
+                displaySearchResults(filteredAnswerKeys);
             }
         });
 
@@ -134,23 +237,61 @@
             // 파일 이름을 안전하게 처리 (예시: 날짜+이름)
             const newFileName = `${new Date().toISOString()}-${file.name}`;
 
-            // 여기서는 파일을 서버에 저장하는 대신, 클라이언트 메모리에 임시로 저장합니다.
-            const newAnswerKey = {
-                bookName: bookName,
-                subject: subject,
-                file: URL.createObjectURL(file), // Use createObjectURL for local preview
-                fileName: newFileName, // Store the safe file name
+            // 파일을 base64 문자열로 읽어서 answerKeys 배열에 저장합니다.
+            const reader = new FileReader();
+            reader.onload = () => {
+                const newAnswerKey = {
+                    bookName: bookName,
+                    subject: subject,
+                    file: reader.result, // Store the base64 string
+                    fileName: newFileName,
+                };
+
+                answerKeys.push(newAnswerKey);
+                // 로컬 스토리지에 업데이트된 answerKeys를 저장합니다.
+                localStorage.setItem('answerKeys', JSON.stringify(answerKeys));
+
+                console.log("Uploaded:", newAnswerKey);
+                uploadMessage.textContent = "답안이 성공적으로 업로드되었습니다.";
+                uploadMessage.style.color = "green";
+                uploadBookNameInput.value = '';
+                uploadSubjectInput.value = '';
+                uploadFileInput.value = ''; // Clear the file input
+
+                // 업로드 후 검색 결과를 다시 표시하여 업로드된 파일이 보이도록 합니다.
+                displaySearchResults();
             };
-
-            answerKeys.push(newAnswerKey);
-            console.log("Uploaded:", newAnswerKey); // Log the uploaded file info
-
-            uploadMessage.textContent = "답안이 성공적으로 업로드되었습니다.";
-            uploadMessage.style.color = "green";
-            uploadBookNameInput.value = '';
-            uploadSubjectInput.value = '';
-            uploadFileInput.value = ''; // Clear the file input
+            reader.onerror = () => {
+                uploadMessage.textContent = "파일 업로드에 실패했습니다.";
+                uploadMessage.style.color = "red";
+            };
+            reader.readAsDataURL(file); // Read the file as base64
         });
+
+        function displaySearchResults(results = answerKeys) {
+            resultsList.innerHTML = ''; // Clear previous results
+            if (results.length === 0) {
+                noResultsMessage.style.display = 'block';
+                resultsContainer.style.display = 'none';
+            } else {
+                noResultsMessage.style.display = 'none';
+                resultsContainer.style.display = 'block';
+                results.forEach(answerKey => {
+                    const listItem = document.createElement('li');
+                    listItem.className = "bg-white rounded-md shadow-sm py-2 px-3 flex justify-between items-center";
+                    listItem.innerHTML = `
+                        <div>
+                            <h3 class="font-semibold text-gray-800">${answerKey.bookName}</h3>
+                            <p class="text-gray-600 text-sm">${answerKey.subject}</p>
+                        </div>
+                        <a href="${answerKey.file}" download="${answerKey.fileName}" class="bg-blue-500 hover:bg-blue-600 text-white rounded-md py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-colors duration-300">
+                            다운로드
+                        </a>
+                    `;
+                    resultsList.appendChild(listItem);
+                });
+            }
+        }
     </script>
 </body>
 </html>
