--- a/search.html
+++ b/search.html
@@ -221,6 +221,24 @@
                 imgSrc: 'https://i.postimg.cc/5NcKz42V/1316.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
+            {
+                title: '100발 100중 중학 영어 1-1',
+                link: 'https://jungdapi.netlify.app/100bal',
+                imgSrc: 'https://i.postimg.cc/LXWQBvQ0/image.jpg',
+                description: '클릭하여 답지를 다운로드 하세요.',
+            },
+            {
+                title: '수력충전 중학 수학 1-1',
+                link: 'https://jungdapi.netlify.app/suryeok',
+                imgSrc: 'https://i.postimg.cc/zD4x87tg/image.jpg',
+                description: '클릭하여 답지를 다운로드 하세요.',
+            },
+            {
+                title: '쏀 중학 수학 1-1',
+                link: 'https://jungdapi.netlify.app/ssen',
+                imgSrc: 'https://i.postimg.cc/wv5kFPT5/image.jpg',
+                description: '클릭하여 답지를 다운로드 하세요.',
+            },
         ];
 
         function handleSearch() {
