--- a/index.html
+++ b/index.html
@@ -421,16 +421,16 @@
                 },
                
                 {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '쎈 중학 수학 1-1',
+                    link: 'https://jungdapi.netlify.app/ssen',
+                    imgSrc: 'https://i.postimg.cc/wv5kFPT5/image.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '라이트쎈 중학 수학 1-1',
+                    link: 'https://jungdapi.netlify.app/litessen',
+                    imgSrc: 'https://i.postimg.cc/mrNhtsFK/image.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
