--- a/litessen.html
+++ b/litessen.html
@@ -228,7 +228,7 @@
     <div class="book-section">
         <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/T25Sv5Q1/ilove.jpg" alt="라이트쎈 중학 수학 1-1" class="book-cover">
+            <img src="https://i.postimg.cc/mrNhtsFK/image.jpg" alt="라이트쎈 중학 수학 1-1" class="book-cover">
             <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">라이트쎈 중학 수학 1-1</h3>
             <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
                명확한 개념 설명과 다양한 유형의 문제 제공!
