--- a/index.html
+++ b/index.html
@@ -433,10 +433,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '개념원리 중학 수학 1-1',
+                    link: 'https://jungdapi.netlify.app/wonri',
+                    imgSrc: 'https://i.postimg.cc/8P8wVdNc/image.png',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
