--- a/babba.html
+++ b/babba.html
@@ -210,12 +210,12 @@
             }
 
             viewButton.addEventListener('click', () => {
-                window.open('https://drive.google.com/file/d/1HZtl5buWlRj1XnhpzzvuuatOY-BWegAs/view?usp=sharing', '_blank');
+                window.open('https://drive.google.com/file/d/1-t9ULSJIKcA0LZf_tjs8eQaL28gLUo3k/view?usp=sharing', '_blank');
             });
 
             downloadButton.addEventListener('click', () => {
                 // 다운로드 링크를 직접 지정합니다.
-                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1HZtl5buWlRj1XnhpzzvuuatOY-BWegAs&export=download';
+                const downloadUrl = 'https://drive.usercontent.google.com/u/0/uc?id=1-t9ULSJIKcA0LZf_tjs8eQaL28gLUo3k&export=download';
                 // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
                 window.location.href = downloadUrl;
             });
