--- a/babba.html
+++ b/babba.html
@@ -237,8 +237,7 @@
             <img src="https://i.postimg.cc/3RjZKxxS/images-1.png" alt="바빠 고등 수학으로 연결되는 중학도형 총정리" class="book-cover">
             <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">바빠 고등 수학으로 연결되는 중학도형 총정리</h3>
             <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
-                간결한 개념 설명과 세분화된 유형별 문제 제공, 심화 단계로 넘어가기 전 중학교 수학 기본기를 탄탄하게 완성할 수 있는 기본서!
-            </p>
+                바쁘다 바빠 고등수학까지 이어지는 중학도형 총정리!
         </div>
         <div class="button-container">
             <button class="view-button">웹에서 보기</button>
