--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '바빠 고등 수학으로 연결되는 중학도형 총정리',
+                    link: 'https://jungdapi.netlify.app/babba',
+                    imgSrc: 'https://i.postimg.cc/3RjZKxxS/images-1.png',
+                    description: '클릭하여 답지를 다운로드 하세요',
                 },
                  {
                     title: '2024 물리 답지',
