--- a/ex2.html
+++ b/ex2.html
@@ -215,7 +215,7 @@
 
             downloadButton.addEventListener('click', () => {
                 // 다운로드 링크를 직접 지정합니다.
-                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1HZtl5buWlRj1XnhpzzvuuatOY-BWegAs&export=download';
+                const downloadUrl = 'https://drive.usercontent.google.com/u/0/uc?id=1jhJJhdfgF9WXkMY9r3glNurMI9wF2Fld&export=download';
                 // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
                 window.location.href = downloadUrl;
             });
@@ -234,10 +234,10 @@
     <div class="book-section">
         <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/3Nj26YjV/1-2.jpg" alt="Junior Reading Expert level2" class="book-cover">
+            <img src="https://i.postimg.cc/Kj6LBXjk/XL.jpg" alt="Junior Reading Expert level2" class="book-cover">
             <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">Junior Reading Expert level2</h3>
             <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
-                간결한 개념 설명과 세분화된 유형별 문제 제공, 심화 단계로 넘어가기 전 중학교 수학 기본기를 탄탄하게 완성할 수 있는 기본서!
+                리딩
             </p>
         </div>
         <div class="button-container">
