--- a/ex2.html
+++ b/ex2.html
@@ -237,7 +237,7 @@
             <img src="https://i.postimg.cc/Kj6LBXjk/XL.jpg" alt="Junior Reading Expert level2" class="book-cover">
             <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">Junior Reading Expert level2</h3>
             <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
-                리딩
+                EFL 학습자를 위한 4단계의 원서형 독해서!
             </p>
         </div>
         <div class="button-container">
