--- a/babba.html
+++ b/babba.html
@@ -234,7 +234,7 @@
     <div class="book-section">
         <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/3RjZKxxS/images-1.png" alt="바빠 고등 수학으로 연결되는 중학도형 총정리" class="book-cover">
+            <img src="https://i.postimg.cc/TwSWv8r7/XL-1.jpg" alt="바빠 고등 수학으로 연결되는 중학도형 총정리" class="book-cover">
             <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">바빠 고등 수학으로 연결되는 중학도형 총정리</h3>
             <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
                 바쁘다 바빠 고등수학까지 이어지는 중학도형 총정리!
