--- a/index.html
+++ b/index.html
@@ -447,14 +447,14 @@
                  {
                     title: '바빠 고등 수학으로 연결되는 중학도형 총정리',
                     link: 'https://jungdapi.netlify.app/babba',
-                    imgSrc: 'https://i.postimg.cc/3RjZKxxS/images-1.png',
-                    description: '클릭하여 답지를 다운로드 하세요',
+                    imgSrc: 'https://i.postimg.cc/TwSWv8r7/XL-1.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: 'Junior Reading Expert level2',
+                    link: 'https://jungdapi.netlify.app/ex2',
+                    imgSrc: 'https://i.postimg.cc/Kj6LBXjk/XL.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
