--- a/1316.html
+++ b/1316.html
@@ -136,8 +136,8 @@
             </p>
         </div>
         <div class="button-container">
-            <button class="view-button">웹에서 보기</button>
-            <button class="download-button">다운로드</button>
+            <button class="view-button" onclick="window.open('https://drive.google.com/file/d/1KJdLzOQ-dJd9Ybu6KRmpr910x5GDYlGV/view?usp=sharing', '_blank')">웹에서 보기</button>
+            <button class="download-button" onclick="window.location.href='https://drive.usercontent.google.com/uc?id=1KJdLzOQ-dJd9Ybu6KRmpr910x5GDYlGV&export=download'">다운로드</button>
         </div>
     </div>
 </body>
