--- a/ch1.html
+++ b/ch1.html
@@ -14,17 +14,10 @@
             transition: background-color 0.3s ease;
             background-color: transparent;
         }
-        body.dark-mode {
-            background-color: #111;
-            color: #eee;
-        }
         h1 {
             margin-bottom: 20px;
             color: #333;
             transition: color 0.3s ease;
-        }
-        h1.dark-mode {
-            color: #fff;
         }
         .book-section {
             text-align: center;
@@ -34,17 +27,10 @@
             background-color: transparent;
             transition: background-color 0.3s ease;
         }
-        .book-section.dark-mode {
-            background-color: #333;
-            color: #eee;
-        }
         .book-section h2 {
             color: #333;
             transition: color 0.3s ease;
             margin-bottom: 20px;
-        }
-        .book-section h2.dark-mode {
-            color: #fff;
         }
         .book-info {
             display: flex;
@@ -69,9 +55,6 @@
             color: #333;
             transition: color 0.3s ease;
         }
-        .book-title.dark-mode {
-            color: #fff;
-        }
         .book-description {
             font-size: 0.9em;
             color: #666;
@@ -79,9 +62,6 @@
             text-align: left;
             margin-bottom: 20px;
             line-height: 1.6;
-        }
-        .book-description.dark-mode {
-            color: #ddd;
         }
         .button-container {
             display: flex;
@@ -113,24 +93,6 @@
             box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
             transform: translateY(-2px);
         }
-        .dark-mode .view-button {
-            background-color: #000;
-            color: #fff;
-        }
-        .dark-mode .view-button:hover {
-            background-color: #333;
-            box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-            transform: translateY(-2px);
-        }
-        .dark-mode .download-button {
-            background-color: #000;
-            color: #fff;
-        }
-        .dark-mode .download-button:hover {
-            background-color: #333;
-            box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-            transform: translateY(-2px);
-        }
         .go-back-button {
             position: fixed;
             top: 20px;
@@ -140,7 +102,7 @@
             border-radius: 5px;
             background-color: transparent;
             cursor: pointer;
-            transition:  color 0.3s ease;
+            transition: color 0.3s ease;
             z-index: 10;
             color: #000;
             text-decoration: none;
@@ -148,13 +110,7 @@
             align-items: center;
         }
         .go-back-button:hover {
-             color: #333;
-        }
-        .dark-mode .go-back-button {
-            color: #fff;
-        }
-        .dark-mode .go-back-button:hover {
-            color: #ddd;
+            color: #333;
         }
         .go-back-button span {
             margin-right: 5px;
@@ -176,32 +132,31 @@
             }
         }
     </style>
+</head>
+<body>
+    <a href="index.html" class="go-back-button">
+        <span>←</span>
+    </a>
+    <div class="book-section">
+        <h2>책 소개</h2>
+        <div class="book-info">
+            <img src="https://i.postimg.cc/Vk1P8sjc/image.jpg" alt="체크체크 중학 수학 1-1" class="book-cover">
+            <h3 class="book-title">체크체크 중학 수학 1-1</h3>
+            <p class="book-description">
+                간결한 개념 설명과 세분화된 유형별 문제 제공, 심화 단계로 넘어가기 전 중학교 수학 기본기를 탄탄하게 완성할 수 있는 기본서!
+            </p>
+        </div>
+        <div class="button-container">
+            <button class="view-button">웹에서 보기</button>
+            <button class="download-button">다운로드</button>
+        </div>
+    </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const darkModeButton = document.getElementById('dark-mode-button');
-            const body = document.body;
-            const bookSection = document.querySelector('.book-section');
-            const bookTitle = document.querySelector('.book-title');
-            const bookDescription = document.querySelector('.book-description');
             const viewButton = document.querySelector('.view-button');
             const downloadButton = document.querySelector('.download-button');
             const goBackButton = document.querySelector('.go-back-button');
-
-
-            darkModeButton.addEventListener('click', () => {
-                body.classList.toggle('dark-mode');
-                bookSection.classList.toggle('dark-mode');
-                bookTitle.classList.toggle('dark-mode');
-                bookDescription.classList.toggle('dark-mode');
-                localStorage.setItem('darkMode', body.classList.contains('dark-mode'));
-            });
-
-            if (localStorage.getItem('darkMode') === 'true') {
-                body.classList.add('dark-mode');
-                bookSection.classList.add('dark-mode');
-                bookTitle.classList.add('dark-mode');
-                bookDescription.classList.add('dark-mode');
-            }
 
             viewButton.addEventListener('click', () => {
                 window.open('https://drive.google.com/file/d/1GHBNhFzaldjPhdWN36KVsmYcQ-n9bMBp/view?usp=sharing', '_blank');
@@ -219,25 +174,5 @@
             });
         });
     </script>
-</head>
-<body>
-    <a href="index.html" class="go-back-button">
-        <span>←</span>
-    </a>
-    <button id="dark-mode-button" class="dark-mode-button"></button>
-    <div class="book-section">
-        <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
-        <div class="book-info">
-            <img src="https://i.postimg.cc/Vk1P8sjc/image.jpg" alt="체크체크 중학 수학 1-1" class="book-cover">
-            <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">체크체크 중학 수학 1-1</h3>
-            <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
-                간결한 개념 설명과 세분화된 유형별 문제 제공, 심화 단계로 넘어가기 전 중학교 수학 기본기를 탄탄하게 완성할 수 있는 기본서!
-            </p>
-        </div>
-        <div class="button-container">
-            <button class="view-button">웹에서 보기</button>
-            <button class="download-button">다운로드</button>
-        </div>
-    </div>
 </body>
 </html>
